[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Opponent.gd" type="Script" id=3]
[ext_resource path="res://src/Level.gd" type="Script" id=4]
[ext_resource path="res://src/Poetsen.ttf" type="DynamicFontData" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 960, 50 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50, 540 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 5 )

[node name="Level" type="Node2D"]
position = Vector2( 3, 0 )
script = ExtResource( 4 )

[node name="ParedSuperior" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParedSuperior"]
position = Vector2( 960, -50 )
shape = SubResource( 1 )

[node name="ParedInferior" type="StaticBody2D" parent="."]
position = Vector2( 0, 1180 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParedInferior"]
position = Vector2( 960, -50 )
shape = SubResource( 1 )

[node name="ArcoPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArcoPlayer"]
position = Vector2( -50, 540 )
shape = SubResource( 2 )

[node name="ArcoOponent" type="Area2D" parent="."]
position = Vector2( 2020, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArcoOponent"]
position = Vector2( -50, 540 )
shape = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 50, 450 )

[node name="Opponent" parent="." instance=ExtResource( 1 )]
position = Vector2( 1860, 450 )
script = ExtResource( 3 )

[node name="Ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 938, 529 )

[node name="MarcadorPlayer" type="Label" parent="."]
margin_right = 960.0
margin_bottom = 1080.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Player I"
align = 1
valign = 1

[node name="MarcadorOpponent" type="Label" parent="."]
margin_left = 960.0
margin_right = 1920.0
margin_bottom = 1080.0
custom_fonts/font = SubResource( 4 )
text = "Player II"
align = 1
valign = 1

[node name="RestartTimer" type="Timer" parent="."]

[connection signal="body_entered" from="ArcoPlayer" to="." method="_on_ArcoPlayer_body_entered"]
[connection signal="body_entered" from="ArcoOponent" to="." method="_on_ArcoOponent_body_entered"]
[connection signal="body_shape_entered" from="ArcoOponent" to="." method="_on_ArcoOponent_body_shape_entered"]
[connection signal="timeout" from="RestartTimer" to="Ball" method="_on_RestartTimer_timeout"]
